[package]
name = "album-club-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
google-sheets4 = "3.0.0"
lazy_static = "1" 
serenity = "0.10.10"
tokio = {version = "1", features = ["rt-multi-thread"]}
